# mcp-travel

./: .env.example  .gitignore  Containerfile  README.md  pyproject.toml
scraper/: Containerfile  pyproject.toml
scraper/app/: irish_ferries.py  main.py  ryanair.py
src/mcp_travel/: travel_canary.py  travel_db.py  travel_eurostar.py  travel_ferries.py  travel_fx.py  travel_geocode.py  travel_hotels.py  travel_irish_ferries.py  travel_italy_status.py  travel_mcp.py  travel_multi_leg.py  travel_norway.py  travel_ns.py  travel_plan.py  travel_rank.py  travel_ryanair.py  travel_sbb.py  travel_sncb.py  travel_sncf.py  travel_stena_line.py  travel_sweden.py  travel_tfl.py  travel_trenitalia.py  travel_uk.py
