[project]
name = "mcp-travel-scraper"
version = "0.1.0"
description = "Sidecar service for Playwright-driven ferry scrapers (Irish Ferries)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.10.0",
    "playwright>=1.49.0",
    "playwright-stealth>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
